@@ -2,22 +2,25 @@
 #define MEASUREMENT_H
 #include <cmath>
 #include <stdexcept>
+#include "argh.h"
+#include "csv.h"
+#include "date.h"
+
 class Measurement {
  public:
-  // Note: Bad idea, using two adjacent parameters that can be switched
-  // accidentally!
-  Measurement(double signal, double background, int id);
 
-  // Alternative if you don't want to throw an exception for an invalid object
-  bool is_valid() const { return (id > 0 && signal >= 0 && background >= 0); }
-  int get_id() const { return id; }
-  double get_background() const { return background; }
-  double get_signal() const { return signal; }
+  //Constructor
+  Measurement(date::year_month_day date, std::string time, double temperature);
+
+  //Get functions
+  double get_temperature() const { return temperature; }
+  std::string get_time() const { return time; }
+  date::year_month_day get_date() const { return date; }
 
  private:
-  double signal;
-  double background;
-  int id;
+  date::year_month_day date;
+  std::string time;
+  double temperature;
 };
 
 #endif /* MEASUREMENT_H */
