@@ -1,8 +1,5 @@
 #include "DataExtraction.h"
-#include "Measurement.h"
-
-
-
+#include "date.h"
 
 std::string cleaning(std::string file_name){
   const char* path = "~/git/MNXB11-project-EVA/datasets/smhicleaner.sh ~/git/MNXB11-project-EVA/datasets/";
@@ -16,73 +13,54 @@ std::string cleaning(std::string file_name){
   std::string new_string= "baredata_" + file_name;
 
   return new_string;
-
 }
 
+void directory_cleaning(std::string file_name){
+  //Takes the paths of the new files created from cleaning() and removes them
+  std::string path_baredata = ("rm " + file_name);
 
+  std::string original = "original_" + file_name.substr(9,100);
+  std::string path_original = ("rm " + original);
 
+  system(path_baredata.c_str()); system(path_original.c_str());
+}
 
-int read_csv(std::string file_name){
+std::vector<Measurement> read_csv(std::string file_name){
 
+    //We declare the vector where we want our data
     std::vector<Measurement> measurements;
 
+    //Run the csv parser on our file and assign it to in
     io::CSVReader<4> in(file_name);
-    in.read_header(io::ignore_extra_column, "day", "year", "month", "measurement");
 
-    int day; int year; int month; double measurement;
+    //Assign variables
+    std::string date; std::string time; double temperature; std::string quality;
+    int y; int m; int d;
 
-    while(in.read_row(day, year, month, measurement)){
+    //Iterate through every row in our datafile for all four columns (date, time, temp, quality of measurement)
+    while(in.read_row(date, time, temperature, quality)){
+      //Take the date string and put it into integers for year, month and date and then make a new variable with the
+      //date function
+      y = std::stoi(date.substr(0,4)); m = std::stoi(date.substr(5,2)); d = std::stoi(date.substr(8,2));
+      date::year_month_day date{date::year(y), date::month(m), date::day(d)};
 
-        date::year_month_day date{date::year(year), date::month(month), date::day(day)};
-
-        if (!date.ok()) {
-            std::cerr << "Invalid date: " << year << "-" << month << "-" << day << std::endl;
-            continue; 
-        }
-
-        std::cout << format("%F", date) << "," << measurement << std::endl;
-
+      //Check that the given date is a valid date
+      if (!date.ok()) {
+        std::cerr << "Invalid date: " << y << "-" << m << "-" << d << std::endl;
+        continue; 
       }
 
-  return 0;
+      //Declare a Measurement class and then add it to the vector
+      Measurement mesh(date, time, temperature);
+      measurements.push_back(mesh);
 
+    }
+
+  return measurements;
 }
 
 /*
 
-std::vector<Measurement> read_measurements(const std::string& filename) {
-  // This code is WRONG! Can you spot the problems? It isn't easy, which is why
-  // one of the reasons you don't want to write this kind of code yourself.
-  std::ifstream file{filename};
-  std::vector<Measurement> measurements;
-  // Declaring a bunch of variables in advance, not good practice! Use a library
-  // for reading CSV!
-  int year, month, day, hour, minute, second, id;
-  double signal, background, value;
-  std::string header;
-  // Assume first line is a header, read it first before we get the actual data
-  std::getline(file, header);
-
-  char comma;
-
-  while (file >> year >> comma >> month >> comma >> day >> comma >> hour >>
-         comma >> minute >> comma >> second >> comma >> id >> comma >> signal >>
-         comma >> background >> comma >> value) {
-    Measurement measurement{signal, background, id};
-    if (measurement.is_valid()) {
-      measurements.push_back(measurement);
-    } else {
-      std::cerr << "Warning: Skipping invalid measurement from (signal, "
-                   "background, id): ("
-                << signal << ", " << background << ", " << id << ")"
-                << std::endl;
-    }
-
-        
-
-    return 0;
-
-}
 
 std::vector<Measurement> read_measurements(const std::string& file_name) {
     // This code is WRONG! Can you spot the problems? It isn't easy, which is why
